# AppCUI

./: .gitignore  meson.build
AppCUI/: meson.build
AppCUI/include/: AppCUI.hpp
AppCUI/src/: Internal.hpp
AppCUI/src/Application/: AbstractTerminal.cpp  Application.cpp
AppCUI/src/Graphics/: JPGLoader.cpp  PNGLoader.cpp
AppCUI/src/OS/Clipboard/: Clipboard.cpp
AppCUI/src/OS/Windows/: Library.cpp
AppCUI/src/Terminal/Factory/: Windows.cpp
AppCUI/src/Terminal/WindowsTerminal/: WindowsTerminal.cpp  WindowsTerminal.hpp
